--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trafficads-ai-creator",
+  "name": "meu-gestor-de-tráfego",
   "private": true,
   "version": "0.0.0",
   "type": "module",
